[package]
name = "backstitch-launcher"
version = "2.1.1"
edition = "2024"
authors = ["Lilith Silver"]
license = "MIT"
description = "Ensures the correct Backstitch and Godot versions and runs your project."

[package.metadata.bundle]
name = "backstitch-launcher-macos"
identifier = "com.inkandswitch.backstitch-launcher"
copyright = "Copyright (c) Ink & Switch LLC"
category = "Developer Tool"
short_description = "Launcher for Backstitch Godot projects."
long_description = """
Downloads and runs the matching Backstitch editor and Godot for your project.
"""

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version="4.6.1", features=["derive"] }
futures = "0.3.32"
indicatif = "0.18.4"
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
semver = "1.0.28"
serde = { version="1.0.228", features=["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version="1.52.3", features=["rt-multi-thread", "macros", "fs"] }
tokio-util = "0.7.18"
toml = "1.1.2"
url = { version="2.5.8", features=["serde"] }
zip = "8.6.0"

# mac only dependencies
[target.'cfg(target_os = "macos")'.dependencies]
untranslocator = "0.1.2"
